--- a/README.adoc
+++ b/README.adoc
@@ -13,18 +13,19 @@ Add link:rc/ui.kak[+ui.kak+] to your autoload or source it manually.
 * Commands for toggling various user interface options (highlighters) and related hooks;
 * A +ui+ link:https://github.com/mawww/kakoune/blob/master/doc/pages/modes.asciidoc#user-modes[user mode] with key mappings for all commands.
 
-[options="header"]
+[options="header",cols="1,4"]
 |===
 | Mapping
 | Command
 
 | +l+
 | *+ui-line-numbers-toggle+*
-    :: Display line numbers.
+    Display line numbers.
 
 | +s+
 | *+ui-whitespaces-toggle+*
-    :: Display whitespaces.
+    Display whitespaces.
+
 |===
 
 *+ui-line-numbers-toggle+*::
