--- a/README.adoc
+++ b/README.adoc
@@ -13,25 +13,11 @@ Add link:rc/ui.kak[+ui.kak+] to your autoload or source it manually.
 * Commands for toggling various user interface options (highlighters) and related hooks;
 * A +ui+ link:https://github.com/mawww/kakoune/blob/master/doc/pages/modes.asciidoc#user-modes[user mode] with key mappings for all commands.
 
-[options="header",cols="1,4"]
-|===
-| Mapping
-| Command
-
-| +l+
-| *+ui-line-numbers-toggle+*
+*+ui-line-numbers-toggle+*:: (mapped to +l+)
     Display line numbers.
 
-| +s+
-| *+ui-whitespaces-toggle+*
+*ui-whitespaces-toggle*::
     Display whitespaces.
-
-|===
-
-*+ui-line-numbers-toggle+*::
-    Display line numbers.
-
-*ui-whitespaces-toggle*:: Display whitespaces.
 
 *ui-trailing-spaces-toggle*::
     Display trailing spaces.
