--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,7 @@ image::screenshot.png[]
 
 == Installation
 
-Add link:rc/ui.kak[+ui.kak+] to your autoload or source it manually.
+Add link:rc/ui.kak[`ui.kak`] to your autoload or source it manually.
 
 == What's included
 
