--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 = ui.kak
 
-Toggle UI options in http://kakoune.org[Kakoune].
+Toggle UI highlighters in http://kakoune.org[Kakoune].
 
 image::screenshot.png[]
 
@@ -10,7 +10,7 @@ Add link:rc/ui.kak[`ui.kak`] to your autoload or source it manually.
 
 == What's included
 
-Commands to toggle various user interface options (highlighters) and related hooks.
+Commands to toggle various user interface highlighters and related hooks.
 
 A `ui` link:https://github.com/mawww/kakoune/blob/master/doc/pages/modes.asciidoc#user-modes[user mode] is defined with key mappings for all commands.
 
